--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "crypto-js": "^4.2.0",
-    "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.4.3",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "uuid": "^13.0.0"
